--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,18 +1,113 @@
-
 img.product-img {
-
-    height: 200px;
-    object-fit: cover;
+  height: 200px;
+  object-fit: cover;
 }
 
-.card.card-product .btn{
-    top: auto;
-    bottom: 0px;
-    position: relative;
+.card.card-product .btn {
+  top: auto;
+  bottom: 0px;
+  position: relative;
 }
 
-.card-footer{
-    background-color: #fff;
+.card-footer {
+  background-color: #fff;
+}
+header{
+  z-index: 999;
+  position: relative;
+
 }
 
+.text-truncate-container {
+}
+.text-truncate-container p {
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+
+
+
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin-top: auto;;
+  background-color: #fff;
+  z-index: 998;
+  opacity: 0.7;
+  display: inline-flex;
+  
+}
+
+.loader svg {
+  margin: auto;
+}
+
+.loader.fade-in {
+  /* display: inline-flex;
+  animation: fading 5000ms; */
+}
+.loader.fade-out {
+  display: none;
+  animation: fading 1000ms;
+}
+
+
+@keyframes fading {
+  0%   {display: inline-flex; opacity: 0.7;}
+  25%  {display: inline-flex;opacity: 0.4;}
+  50%  {display: inline-flex;opacity: 0.1;}
+  75%  {display: inline-flex;opacity: 0;}
+  100% {display: none;opacity: 0;}
+}
+
+
+#sliderId img {
+  height: 350px;
+}
+
+
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+}
+
+.page_404 img {
+  width: 100%;
+}
+
+.four_zero_four_bg {
+  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  height: 400px;
+  background-position: center;
+}
+
+.four_zero_four_bg h1 {
+  font-size: 80px;
+}
+
+.four_zero_four_bg h3 {
+  font-size: 80px;
+}
+
+.link_404 {
+  color: #fff !important;
+  padding: 10px 20px;
+  background: #39ac31;
+  margin: 20px 0;
+  display: inline-block;
+}
+.contant_box_404 {
+  margin-top: -50px;
+}
 
